--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.9",
     "apollo-server-express": "^3.10.2",
+    "aws-sdk": "^2.1218.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
